# lg-agent-client

./: Readme.md  pyproject.toml
src/: run_client.py
src/client/: client.py
src/core/: __init__.py  settings.py
ts-src/: .gitignore  package-lock.json  package.json
ts-src/src/: index.ts  run_client.ts  run_client2.ts
ts-src/src/client/: client.ts
ts-src/src/schema/: models.ts  schema.ts
