[project]
name = "pyclient"
version = "0.1.0"
description = "Client for the AI Agent Service"
readme = "README.md"
authors = [{ name = "Joshua Carroll", email = "carroll.joshk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11, <3.13"

dependencies = [
    "httpx~=0.27.2",
    "pydantic ~=2.10.1",
    "pydantic-settings ~=2.6.1",
    "python-dotenv ~=1.0.1",
]


